--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.4.0",
     "@mui/x-date-pickers": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
